change to ipv4 :(

--- a/config_daemon/template.conf
+++ b/config_daemon/template.conf
@@ -4,6 +4,6 @@ Address = {{.Address}}
 
 [Peer]
 PublicKey = {{.PublicKey}}
-AllowedIPs = fd69:420:4ece::69/128
+AllowedIPs = 10.10.9.2/32
 Endpoint = {{.Endpoint}}
 PersistentKeepalive = 60
