--- a/config_daemon/Dockerfile
+++ b/config_daemon/Dockerfile
@@ -15,7 +15,47 @@ COPY config_daemon/. .
 
 RUN go build -o /app/main .
 
-FROM alpine:3.14
+
+ARG PYTHON_VERSION=3.12.2
+FROM python:${PYTHON_VERSION}-slim as base
+# Prevents Python from writing pyc files.
+ENV PYTHONDONTWRITEBYTECODE=1
+# Keeps Python from buffering stdout and stderr to avoid situations where
+# the application crashes without emitting any logs due to buffering.
+ENV PYTHONUNBUFFERED=1
+# Ignore that pip runs as root
+ENV PIP_ROOT_USER_ACTION=ignore
+
+WORKDIR /root
+
+RUN apt update && apt install --no-install-recommends -y python3-full && apt clean autoclean && apt autoremove --yes && rm -rf /var/lib/{apt,cache,dpkg,log}
+
+
+
+FROM base as builder2
+
+
+RUN apt update && apt install --no-install-recommends -y gcc build-essential libssl-dev git
+#RUN --mount=type=bind,source=requirements.txt,target=requirements.txt \
+#    python3 -m pip install --user --no-cache-dir -r requirements.txt && python3 -m pip install --user --no-cache-dir -U pip setuptools
+
+WORKDIR /app
+# Copy the source code into the container, and install it only for the user.
+RUN python3 -m pip install  --no-warn-script-location --no-cache-dir --user git+https://github.com/jawshoeadan/pymobiledevice3
+RUN python3 -m pip install  --no-warn-script-location --no-cache-dir --user git+https://github.com/jawshoeadan/JitStreamer
+ENV PATH=/root/.local/bin:$PATH
+
+
+FROM base as final
+# Move pre-built files to a fresh image and make sure path contains .local/bin
+COPY --from=builder2 /root/.local /root/.local
+ENV PATH=/root/.local/bin:$PATH
+
+# Expose the port that the application listens on.
+EXPOSE 8080
+EXPOSE 49151
+
+COPY ./sidejitserver/entrypoint.sh /root/entrypoint.sh
 
 COPY --from=builder /app/main /app/main
 
@@ -26,4 +66,5 @@ WORKDIR /configs
 
 EXPOSE 51280/udp
 
-CMD ["/app/main"]
+# Run the application.
+CMD ["sh", "/root/entrypoint.sh"]
