--- a/config_daemon/Dockerfile
+++ b/config_daemon/Dockerfile
@@ -16,8 +16,7 @@ COPY config_daemon/. .
 RUN go build -o /app/main .
 
 
-ARG PYTHON_VERSION=3.12.2
-FROM python:${PYTHON_VERSION}-slim as base
+FROM python:3.12.2-slim as base
 # Prevents Python from writing pyc files.
 ENV PYTHONDONTWRITEBYTECODE=1
 # Keeps Python from buffering stdout and stderr to avoid situations where
