--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
     cap_add:
       - NET_ADMIN
       - NET_RAW
+      - SYS_MODULE
     environment:
       - HOSTNAME=jit.pythonplayer123.dev
 
