--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     volumes:
       - ./configs:/configs
       - ./configs:/home/runner
+      - /lib/modules:/lib/modules
     ports:
       - "51820:51820/udp"
     networks:
@@ -22,7 +23,9 @@ services:
       - SYS_MODULE
     environment:
       - HOSTNAME=jit.pythonplayer123.dev
-
+    sysctls:
+      - net.ipv4.ip_forward=1
+      - net.ipv4.conf.all.src_valid_mark=1
 
   web:
     build:
