--- a/config_daemon/template.conf
+++ b/config_daemon/template.conf
@@ -4,6 +4,6 @@ Address = {{.Address}}
 
 [Peer]
 PublicKey = {{.PublicKey}}
-AllowedIPs = 10.9.9.69/32, 10.12.0.0/16
+AllowedIPs = 10.9.9.69/32, 10.12.0.0/16, 10.11.0.0/16, 10.13.0.0/16
 Endpoint = {{.Endpoint}}
 PersistentKeepalive = 60
